objects/VisitOps__Room_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Agenda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agenda</label>
        <referenceTo>VisitOps__Agenda__c</referenceTo>
        <relationshipLabel>Room Schedule</relationshipLabel>
        <relationshipName>Room_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__CommonRoom__c</fullName>
        <formula>IF(AND(VisitOps__Agenda__r.VisitOps__Visit__c= VisitOps__Visit__c, VisitOps__Agenda__r.VisitOps__Room__c = VisitOps__Visit__r.VisitOps__Room__c, VisitOps__Agenda__r.VisitOps__Start_Time__c &gt;= VisitOps__Visit__r.VisitOps__ArrivalDateTime__c ,VisitOps__Agenda__r.VisitOps__Start_Time__c &lt;= VisitOps__Visit__r.VisitOps__DepartureDateTime__c , VisitOps__Agenda__r.VisitOps__End_Time__c &gt;= VisitOps__Visit__r.VisitOps__ArrivalDateTime__c,VisitOps__Agenda__r.VisitOps__End_Time__c &lt;= VisitOps__Visit__r.VisitOps__DepartureDateTime__c ),true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Common Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__EndDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EndDateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__EndTimeLocationFormula__c</fullName>
        <formula>IF(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2)) == 00, 
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2))+12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2)) == 12, 
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2))) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2)) &lt; 12, 
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;, 
LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__EndTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,8),2))-12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__EndTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;)))</formula>
        <label>End Time (Room Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__EndTimeLocationTZ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time (Room Location)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__End_DateTime_Location__c</fullName>
        <formula>IF( ISBLANK( VisitOps__Agenda__c ), VisitOps__Visit__r.VisitOps__Departure_Date_and_Time_LocationFormula__c , VisitOps__Agenda__r.VisitOps__End_Time_LocationFormula__c )</formula>
        <label>End DateTime (Base Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Point_Of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point Of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Room_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Room_Location__c</fullName>
        <formula>VisitOps__Room__r.VisitOps__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Room__c</fullName>
        <label>Room</label>
        <referenceTo>VisitOps__Room__c</referenceTo>
        <relationshipLabel>Room Schedule</relationshipLabel>
        <relationshipName>Room_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>VisitOps__StartTimeLocationFormula__c</fullName>
        <formula>IF(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2)) == 00, 
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2))+12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2)) == 12, 
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2))) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;,IF(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2)) &lt; 12, 
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;AM&apos;, 
LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,14),2) 
+ &apos;/&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,11),2) 
+ &apos;/&apos; + LEFT(VisitOps__StartTimeLocationTZ__c,4) 
+ &apos; &apos; + TEXT(VALUE(LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,8),2))-12) 
+ &apos;:&apos; + LEFT(RIGHT(VisitOps__StartTimeLocationTZ__c,5),2) 
+ &apos; &apos; + &apos;PM&apos;)))</formula>
        <label>Start Time (Room Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__StartTimeLocationTZ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time (Room Location)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Start_DateTime_Location__c</fullName>
        <formula>IF( ISBLANK(VisitOps__Agenda__c) , VisitOps__Visit__r.VisitOps__Arrival_Date_and_Time_LocationFormula__c , VisitOps__Agenda__r.VisitOps__Start_Time_LocationFormula__c )</formula>
        <label>Start DateTime (Base Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Start_DateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>OnHold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Room Schedule</relationshipLabel>
        <relationshipName>Room_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__is_Visit_Multiple_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Visit Multiple Room?</label>
        <type>Checkbox</type>
    </fields>
    <label>Room Schedule</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Room__c</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>VisitOps__StartTimeLocationFormula__c</columns>
        <columns>VisitOps__EndTimeLocationFormula__c</columns>
        <columns>VisitOps__Start_DateTime__c</columns>
        <columns>VisitOps__EndDateTime__c</columns>
        <columns>VisitOps__Status__c</columns>
        <columns>VisitOps__Agenda__c</columns>
        <columns>VisitOps__StartTimeLocationTZ__c</columns>
        <columns>VisitOps__EndTimeLocationTZ__c</columns>
        <columns>VisitOps__Start_DateTime_Location__c</columns>
        <columns>VisitOps__End_DateTime_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS{0000}</displayFormat>
        <label>Room Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>